# loghealth

./: CMakeLists.txt  LICENSE  README.md
include/: LogSummary.hpp  LogSummaryPoint.hpp  LogTimePoint.hpp  LogTimeSpan.hpp  LogUtility.hpp
src/: LogSummary.cpp  LogSummaryPoint.cpp  LogTimeSpan.cpp  LogUtility.cpp  main.cpp
